.provarCaches/00D410000011HE0EAM/objects/rstk__peitemfeat__c.object
<CustomObject>
    <description>peitemfeat__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__peitemfeat_peitem__r.rstk__externalid__c &amp; &apos;_&apos; &amp;  rstk__peitemfeat_feature__r.rstk__externalid__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_extid</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__peitemfeat_peitem__r.rstk__peitem_item__c &amp; &apos;:&apos; &amp;  rstk__peitemfeat_feature__r.rstk__feature_id__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>formula_name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__peitemfeat_featcat__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Feature Category</label>
        <referenceTo>rstk__featcat__c</referenceTo>
        <relationshipLabel>Engineering Item Features</relationshipLabel>
        <relationshipName>peitemfeats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__peitemfeat_feature__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Feature</label>
        <referenceTo>rstk__feature__c</referenceTo>
        <relationshipLabel>Engineering Item Features</relationshipLabel>
        <relationshipName>peitemfeats</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__peitemfeat_peitem__c</fullName>
        <label>Engineering Item Master</label>
        <referenceTo>rstk__peitem__c</referenceTo>
        <relationshipLabel>Engineering Item Features</relationshipLabel>
        <relationshipName>peitemfeats</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Engineering Item Features</label>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engineering Item Features</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>rstk__Validation_Feature1</fullName>
        <active>true</active>
        <errorConditionFormula>rstk__peitemfeat_featcat__c != rstk__peitemfeat_feature__r.rstk__feature_featcat__c</errorConditionFormula>
        <errorMessage>Feature must belong to the Feature Category</errorMessage>
    </validationRules>
</CustomObject>